# mobiletwm

./: App.js  app.json  package-lock.json  package.json
android/: settings.gradle
android/app/: BUCK  CMakeLists.txt  build.gradle  cpp-adapter.cpp
android/app/src/debug/java/com/mobiletwm/: ReactNativeFlipper.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/mobiletwm/: MainActivity.java  MainApplication.java  NativeModule.java
android/app/src/main/res/values/: strings.xml
android/cpp-code/: libpcsclite.la  libpcscspy.la
ios/: Podfile
ios/mobiletwm/: AppDelegate.m  Info.plist  LaunchScreen.storyboard
ios/mobiletwm.xcodeproj/: project.pbxproj
ios/mobiletwm.xcodeproj/xcshareddata/xcschemes/: mobiletwm.xcscheme
ios/mobiletwmTests/: mobiletwmTests.m
